# PLAN-Kiro-LCCA

./: .gitignore  .gitmodules  PLAN-Kiro-LCCA.md  README.md  eval.md
.kiro/agents/: baseline-coding-agent.json  lcca-coding-agent.json
.kiro/settings/: mcp.json
.kiro/settings/agents/: lcca-coding-agent.json
lcca-context-tools/: lcca-config.yaml  pyproject.toml
lcca-context-tools/lcca_context_tools/: bedrock_client.py  metrics.py  server.py
lcca-context-tools/lcca_context_tools/tools/: analyze_error.py  read_or_summarize.py  smart_grep.py
tasks/: task1_bug_fix.md  task2_feature_impl.md  task3_refactor.md
